[package]
name = "cc-proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11", default-features = false, features = ["json", "stream", "rustls-tls-webpki-roots"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
toml = "0.8"
bytes = "1"
tower = "0.4"
tower-http = { version = "0.5", features = ["trace"] }
sha2 = "0.10"
hex = "0.4"
notify = "6.1"
local-ip-address = "0.5"

[[bin]]
name = "cc-proxy"
path = "src/main.rs"
